--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,146 @@ engine: ejs
 current: index
 ---
 
-<h1>
-  這是一段話
-</h1>
-
-<div class="box"></div>
+<div class="main">
+  <div class="container">
+    <div class="d-flex justify-content-between py-4">
+      <div class="d-flex">
+        <h2 class="h4 mb-0 me-5">Assignment</h2>
+        <p class="mb-0 align-center">All Courses<span class="material-icons text-success">expand_more</span></p>
+      </div>
+      <div>
+        <span class="material-icons me-3">search</span>
+        <span class="material-icons">notifications_active</span>
+      </div>
+    </div>
+    <div class="d-flex justify-content-between">
+      <p class="mb-0">All (4) <span class="material-icons text-success">expand_more</span></p>
+      <div>
+        <p class="fs-smaller text-second  mb-0">2 comments</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <ul class="list-group">
+          <li class="list-group-item list-group-item-action active" aria-current="true">
+            <a class="text-decoration-none text-secondary " id="list-emily" data-bs-toggle="list" href="#list-emily" role="tab">
+              <div class="d-flex justify-content-between">
+                <p class="fs-smaller mb-1">Chapter Assignment 2</p>
+                <p class="fs-smaller mb-1">4 hrs ago</p>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h3 class="h6 text-dark mb-0">Please check this file…</h3>
+                <p class="fs-smaller mb-0">Emily Wang</p>
+              </div>
+            </a>
+          </li>
+          <li class="list-group-item list-group-item-action">
+            <a class="text-decoration-none text-secondary" id="list-david" data-bs-toggle="list" href="#list-david" role="tab">
+              <div class="d-flex justify-content-between">
+                <p class="fs-smaller mb-1">Chapter Assignment 1</p>
+                <p class="fs-smaller mb-1">12 hrs ago</p>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h3 class="h6 text-dark mb-0">My Homework</h3>
+                <p class="fs-smaller mb-0">David Xu</p>
+              </div>
+            </a>
+          </li>
+          <li class="list-group-item list-group-item-action">
+            <a class="text-decoration-none text-secondary" id="list-tony" data-bs-toggle="list" href="#list-tony" role="tab">
+              <div class="d-flex justify-content-between">
+                <p class="fs-smaller mb-1">Final Assignment</p>
+                <p class="fs-smaller mb-1">18 hrs ago</p>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h3 class="h6 text-dark mb-0">Have a problem with this…</h3>
+                <p class="fs-smaller mb-0">Tony Wei</p>
+              </div>
+            </a>
+          </li>
+          <li class="list-group-item list-group-item-action">
+            <a class="text-decoration-none text-secondary" id="list-christina" data-bs-toggle="list" href="#list-christina" role="tab">
+              <div class="d-flex justify-content-between">
+                <p class="fs-smaller mb-1">Final Assignment</p>
+                <p class="fs-smaller mb-1">19 hrs ago</p>
+              </div>
+              <div class="d-flex justify-content-between">
+                <h3 class="h6 text-dark mb-0">Did I do it right?</h3>
+                <p class="fs-smaller mb-0">Christina Lin</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-12 col-md-8">
+        <!-- 以下分頁內容 -->
+        <div class="tab-content" id="nav-tabContent">
+          <div class="tab-pane fade show active" id="list-emily" role="tabpanel" aria-labelledby="list-emily">
+            <div class="card mb-3">
+              <div class="card-header d-flex justify-content-between">
+                <div>
+                  <p class="fs-smaller text-secondary">Chapter Assignment 2 / HTML&CSS</p>
+                  <p class="h6">Please check this file for me, thanks!</p>
+                </div>
+                <span class="material-icons">
+                  more_vert
+                </span>
+              </div>
+              <div class="card border-0">
+                <div class="container">
+                  <div class="row g-0">
+                    <div class="col-1">
+                      <img  class="rounded-circle mt-3" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week5/emilywang.jpeg?raw=true" alt="">
+                    </div>
+                    <div class="col-11">
+                      <div class="card-body border-bottom">
+                        <h5 class=" h6 card-title">Emily Wang</h5>
+                        <p class="card-text fs-small mb-4"><small class="text-muted">10:38 AM (4 hours ago)</small></p>
+                        <p class="fs-small">Hi Teacher, the attached file is my homework of chapter 2. And here comes a question: Why in the following code the height of the <code class="text-success bg-light px-1 rounded-1">div</code> is bigger than the height of the <code class="text-success bg-light px-1 rounded-1">img</code>? There is a gap below the image, but it doesn’t seems to be a padding/margin. 
+                          <br>What is the gap or extra space below image?</p>
+                          <a href="#" class="btn btn-light border" download="HW-2-David.zip">HW-2-David.zip</a>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row g-0">
+                    <div class="col-1">
+                      <img  class="rounded-circle mt-3" src="https://github.com/hexschool/webLayoutTraining1st/blob/master/week5/andychen.jpeg?raw=true" alt="">
+                    </div>
+                    <div class="col-11">
+                      <div class="card-body border-bottom">
+                        <div class="d-flex justify-content-between">
+                          <h5 class=" h6 card-title">Andy Chen (You)</h5>
+                          <div>
+                            <a href="#"><span class="material-icons text-dark">star_outline</span></a>
+                            <a href="#"><span class="material-icons text-dark">mode_edit</span></a>
+                          </div>
+                        </div>
+                        <p class="card-text fs-small mb-4"><small class="text-muted">13:24 AM (1 hours ago)</small></p>
+                        <p class="fs-small">Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q. <br> <br>
+                           You can: <br> <br> 
+                           • adjust the <code class="text-success bg-light px-1 rounded-1">vertical-align</code>of the image to position it elsewhere (e.g. the middle ) or <br>• change the <code class="text-success bg-light px-1 rounded-1">display</code>so it isn’t inline.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-between">
+              <div>
+                <a href="#"><span class="material-icons text-dark align-bottom">chevron_left</span></a>
+                <a href="#"><span class="material-icons text-dark align-bottom ms-4">chevron_right</span></a>
+              </div>
+              <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-outline-success me-3 px-5 py-2">Mark as read</button>
+                <button type="button" class="btn btn-success px-5 py-2">Reply</button>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="list-david" role="tabpanel" aria-labelledby="list-david">...2list-david</div>
+          <div class="tab-pane fade" id="list-tony" role="tabpanel" aria-labelledby="list-tony">...list-tony</div>
+          <div class="tab-pane fade" id="list-christina" role="tabpanel" aria-labelledby="list-christina">...list-christina</div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
