--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@ current: index
       <div class="col-12 col-md-4">
         <ul class="list-group">
           <li class="list-group-item list-group-item-action active" aria-current="true">
-            <a class="text-decoration-none text-secondary " id="list-emily" data-bs-toggle="list" href="#list-emily" role="tab">
+            <a class="text-decoration-none text-secondary "  data-bs-toggle="list" href="#list-emily" role="tab">
               <div class="d-flex justify-content-between">
                 <p class="fs-smaller mb-1">Chapter Assignment 2</p>
                 <p class="fs-smaller mb-1">4 hrs ago</p>
@@ -39,7 +39,7 @@ current: index
             </a>
           </li>
           <li class="list-group-item list-group-item-action">
-            <a class="text-decoration-none text-secondary" id="list-david" data-bs-toggle="list" href="#list-david" role="tab">
+            <a class="text-decoration-none text-secondary"  data-bs-toggle="list" href="#list-david" role="tab">
               <div class="d-flex justify-content-between">
                 <p class="fs-smaller mb-1">Chapter Assignment 1</p>
                 <p class="fs-smaller mb-1">12 hrs ago</p>
@@ -51,7 +51,7 @@ current: index
             </a>
           </li>
           <li class="list-group-item list-group-item-action">
-            <a class="text-decoration-none text-secondary" id="list-tony" data-bs-toggle="list" href="#list-tony" role="tab">
+            <a class="text-decoration-none text-secondary" data-bs-toggle="list" href="#list-tony" role="tab">
               <div class="d-flex justify-content-between">
                 <p class="fs-smaller mb-1">Final Assignment</p>
                 <p class="fs-smaller mb-1">18 hrs ago</p>
@@ -63,7 +63,7 @@ current: index
             </a>
           </li>
           <li class="list-group-item list-group-item-action">
-            <a class="text-decoration-none text-secondary" id="list-christina" data-bs-toggle="list" href="#list-christina" role="tab">
+            <a class="text-decoration-none text-secondary"  data-bs-toggle="list" href="#list-christina" role="tab">
               <div class="d-flex justify-content-between">
                 <p class="fs-smaller mb-1">Final Assignment</p>
                 <p class="fs-smaller mb-1">19 hrs ago</p>
@@ -141,8 +141,8 @@ current: index
             </div>
           </div>
           <div class="tab-pane fade" id="list-david" role="tabpanel" aria-labelledby="list-david">...2list-david</div>
-          <div class="tab-pane fade" id="list-tony" role="tabpanel" aria-labelledby="list-tony">...list-tony</div>
-          <div class="tab-pane fade" id="list-christina" role="tabpanel" aria-labelledby="list-christina">...list-christina</div>
+          <div class="tab-pane fade" id="list-tony" role="tabpanel" aria-labelledby="list-tony">...3list-tony</div>
+          <div class="tab-pane fade" id="list-christina" role="tabpanel" aria-labelledby="list-christina">...4list-christina</div>
         </div>
       </div>
     </div>
